fix layout issue: re-initialize parent information (#2793); and fix wtableview scrollbar glitch (#2797)

--- a/resources/themes/bootstrap/2/wt.less
+++ b/resources/themes/bootstrap/2/wt.less
@@ -501,7 +501,10 @@
     white-space: nowrap;
     background: white;
     border: 1px solid @tableBorder;
-    overflow: auto;
+
+    &.Wt-itemview-paged {
+       overflow: auto;
+    }
 
     .Wt-spacer {
 	background: url(../../../loading.png);
